Structure changed to use Webpack 4.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Lorem Generator</title>
-	<link rel="stylesheet" href="dist/lorem.css">
+	<link rel="stylesheet" href="css/lorem.css">
 	<script src="dist/main.js"></script>
 </head>
 <body>
