--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 <div class="wrapper">
   <header class="header">Lorem, Inc.<br>Nonsense Purveyors Since 1901</header>
   <nav id="navdiv" class="sidebar">
-    <h1>Order Form</h1>
+    <h1>Order&nbsp;Form</h1>
     <p><label for="wordcount">How many words?<br>(0 = random)</label> <input id="wordcount" type="number" value="100"></p>
     <button id="makebtn" class="navbutton">Get Nonsense</button>
+    <button id="copybtn" class="navbutton">Copy Text &#128203;</button>
   </nav>
   <article class="content">
     <h1>The Nonsense You Requested</h1>
     <div id="blurb"></div>
+      <div id="hiddenblurb"><label for="blurbcopy">text only blurb</label> <input id="blurbcopy" type="text" value=""></div>
   </article>
   <footer class="footer">Copyright &copy; ShearSpire Media</footer>
 </div>
