Structure changed to use Webpack 4.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="blurb"></div>
       <div id="hiddenblurb"><label for="blurbcopy">text only blurb</label> <input id="blurbcopy" type="text" value=""></div>
   </article>
-  <footer class="footer">Copyright &copy; ShearSpire Media</footer>
+    <footer class="footer">Copyright &copy; <a href="https://shearspiremedia.com">ShearSpire Media</a></footer>
 </div>
 </body>
 </html>
