--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Lorem Generator</title>
 	<link rel="stylesheet" href="css/lorem.css">
 	<script src="dist/main.js"></script>
+    <!--<script src="src/index.js"></script>-->
 </head>
 <body>
 <div class="wrapper">
@@ -13,12 +14,13 @@
     <h1>Order&nbsp;Form</h1>
     <p><label for="wordcount">How many words?<br>(0 = random)</label> <input id="wordcount" type="number" value="100"></p>
     <button id="makebtn" class="navbutton">Get Nonsense</button>
+      <button id="sonnetbtn" class="navbutton">Get A Sonnet</button>
     <button id="copybtn" class="navbutton">Copy Text &#128203;</button>
   </nav>
   <article class="content">
-    <h1>The Nonsense You Requested</h1>
+    <h1 id="titlehead">The Nonsense You Requested</h1>
     <div id="blurb"></div>
-      <div id="hiddenblurb"><label for="blurbcopy">text only blurb</label> <input id="blurbcopy" type="text" value=""></div>
+    <div id="hiddenblurb"><label for="blurbcopy">blurb</label><textarea id="blurbcopy"></textarea></div>
   </article>
     <footer class="footer">Copyright &copy; <a href="https://shearspiremedia.com">ShearSpire Media</a></footer>
 </div>
