README update to support new Sonnet and copy features.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <button id="copybtn" class="navbutton">Copy Text &#128203;</button>
   </nav>
   <article class="content">
-    <h1 id="titlehead">The Nonsense You Requested</h1>
+    <h1 id="titlehead"></h1>
     <div id="blurb"></div>
     <div id="hiddenblurb"><label for="blurbcopy">blurb</label><textarea id="blurbcopy"></textarea></div>
   </article>
