README update to support new Sonnet and copy features.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <article class="content">
     <h1 id="titlehead"></h1>
     <div id="blurb"></div>
-    <div id="hiddenblurb"><label for="blurbcopy">blurb</label><textarea id="blurbcopy"></textarea></div>
+    <div id="hiddenblurb"><label for="blurbcopy"> </label><textarea id="blurbcopy"></textarea></div>
   </article>
     <footer class="footer">Copyright &copy; <a href="https://shearspiremedia.com">ShearSpire Media</a></footer>
 </div>
