Improved appearance of generated text. Added line breaks for sonnets.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </article>
     <footer class="footer">Copyright &copy; <a href="https://shearspiremedia.com">ShearSpire Media</a></footer>
-    <div class="copyalert" id="copydialog"><p>Your text is in the clipboard.<br>You may now paste it into your layout.</p>
+    <div id="copydialog" class="copyalert"><p>Your text is in the clipboard.<br>You may now paste it into your layout.</p>
     <button id="closealert" class="navigation__button navigation__button--OK">OK</button></div>
 </div>
 </body>
