Reworked LoremMaker as a module to generate phrases from Cicero.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Lorem Generator</title>
 	<link rel="stylesheet" href="css/lorem.css">
 	<script src="dist/main.js"></script>
+<!--    <script type="module" src="src/index.js"></script>-->
 </head>
 <body>
 <div class="wrapper">
@@ -27,7 +28,7 @@
             <textarea id="blurbcopy"><!--A copy of the generated text will appear here.--></textarea>
         </div>
     </article>
-    <footer class="footer">Copyright &copy; <a href="https://shearspiremedia.com">ShearSpire Media</a></footer>
+    <footer class="footer">Copyright &copy; <a href="https://shearspiremedia.com">ShearSpire Media</a> with Latin from <a href="http://www.thelatinlibrary.com/cicero/fin1.shtml">Cicero</a></footer>
     <div id="copydialog" class="copyalert"><p>Your text is in the clipboard.<br>You may now paste it into your layout.</p>
     <button id="closealert" class="navigation__button navigation__button--OK">OK</button></div>
 </div>
