Improved paragraph generation and capitalization for Cicero text.

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 </head>
 <body>
 <div class="wrapper">
-    <header class="header">Lorem, Inc.<br>Nonsense Purveyors Since 1901</header>
+    <header class="header">Lorem, Inc.<br>Text Purveyors Since 1901</header>
     <nav class="navigation">
         <h1>Order&nbsp;Form</h1>
         <p>
             <label for="wordcount">How many words?<br>(0 = random)</label>
             <input id="wordcount" type="number" value="100">
         </p>
-        <button id="makebtn" class="navigation__button">Get Nonsense</button>
+        <button id="makebtn" class="navigation__button">Get Text</button>
         <button id="sonnetbtn" class="navigation__button">Get A Sonnet</button>
         <button id="copybtn" class="navigation__button">Copy Text &#128203;</button>
     </nav>
     <article class="content">
-        <h1 id="titlehead">The Nonsense You Requested</h1>
+        <h1 id="titlehead">The Text You Requested</h1>
         <div id="blurb" class="content__generated-text"><!--The generated text will appear here.--></div>
         <div id="hiddenblurb">
             <label for="blurbcopy">Text for copy/paste</label>
